--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         }
 
         const textElement = document.getElementById("typing-text");
-        const texts = ["im a chud  ", "im gay asf  ",  "   ", " enareddal  ", "   ", ""];
+        const texts = ["im a chud  ", "im a Perverted teacher who wants to date his student  ",  "   ", " enareddal  ", "   ", ""];
         let textIndex = 0;
         let charIndex = 0;
         let isDeleting = false;
