--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         }
 
         const textElement = document.getElementById("typing-text");
-        const texts = ["im a chud  ", "Perverted teacher who wants to date his student  ",  "   ", " enareddal  ", "   ", ""];
+        const texts = ["im a chud  ", "im a perverted teacher who wants to date my own student  ",  "   ", " enareddal  ", "   ", ""];
         let textIndex = 0;
         let charIndex = 0;
         let isDeleting = false;
